<resources>
    <string name="app_name">SMART VOTE</string>
    <string name="logo">logo</string>
    <string name="th_mission_text_view">สำนักงานคณะกรรมการการเลือกตั้ง</string>
    <string name="en_commision_text_view">ELECTION COMMISION OF THAILAND</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="next">Next</string>
</resources>